# Best-Buy-Spider-Man-Collector-Booster-Box

./: .env.example  README.md  pyproject.toml
.github/workflows/: spidey-check.yml
src/spidey/: best_buy.py  email.py
